# holidays-kr

./: .gitignore  README.md  app.py  build.sh  date.csv  date.json  datetime.csv  datetime.json  holidays.ics  index.html  ja.ics  ko.ics  openapi.yml  pyproject.toml  requirements.txt
.github/workflow/: deploy.yml
.github/workflows/: deploy.yml
api/v1/: datetime.csv  datetime.json  holidays.ics
public/api/v1/: date.csv  date.json  datetime.json
