[project]
name = "holidays-kr"
version = "0.1.0"
description = "Korean holidays API service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "arrow==1.3.0",
    "attrs==25.3.0",
    "certifi==2025.4.26",
    "distro==1.9.0",
    "h11==0.16.0",
    "holidays==0.73",
    "httpcore==1.0.8",
    "httpx==0.28.1",
    "idna==3.10",
    "jiter==0.9.0",
    "openai==1.82.0",
    "pydantic==2.11.4",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "TatSu==5.13.1",
    "tqdm==4.67.1",
    "types-python-dateutil==2.9.0.20241206",
    "typing_extensions==4.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]